--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,6 @@ mutagen==1.47.0
 pycparser==2.21
 pycryptodomex==3.19.0
 PyNaCl==1.5.0
-pytube @ git+https://github.com/MrCactusLD/pytube-master@main
 requests==2.31.0
 sniffio==1.3.0
 urllib3==2.1.0
@@ -31,3 +30,4 @@ websockets==12.0
 yarl==1.9.3
 yt-dlp==2023.11.16
 spotipy==2.24.0
+youtube-search-python==1.6.6
